k8s/istio/istio-gateway.yaml
---
# =========================================================
# ISTIO GATEWAY
# =========================================================
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: ecommerce-gateway
  # namespace: $(NAMESPACE)
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
